# obsidian-imgbed

./: .env.example  .gitignore  LICENSE  PROJECT_LOG.md  README.md  build_refs.py  dashboard.html  package.json  pyproject.toml  replace_links.py  serve.ts  test_queries.mjs  upload_oss.py
.github/workflows/: deploy-pages.yml
docs/: project_log.md
docs/superpowers/specs/: 2026-06-20-obsidian-imgbed-opensource-design.md
examples/: sample_manifest.db
scripts/: make_demo_db.py
